package FileTransfer;
message MetaData {
  required string host = 1;
  required string port = 2;
  required string src_filename = 3;
  required string dest_filename = 4;
  required string src_mac_address = 5;
  required string checkbook_dest_filename = 6;
  // The checkbook already synced with the server.
  required bool synced_with_dest = 7;
};

message Slice {
  required string checkbook_dest_filename = 1;
  required int32 index = 2;
  required int32 offset = 3;
  required int32 length = 4;
  required uint32 previous_adler = 5;
  required uint32 adler = 6;
  required bool finished = 7 [default = false];
};

message CheckBook {
  required MetaData meta = 1;
  repeated Slice slice  = 5;
};
